--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,33 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>  
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyBWajMMdzqzXf0VA5D88m7vVT939CsWPYk",
+      authDomain: "todo-list-9c18d.firebaseapp.com",
+      projectId: "todo-list-9c18d",
+      storageBucket: "todo-list-9c18d.appspot.com",
+      messagingSenderId: "1065855891681",
+      appId: "1:1065855891681:web:39669d5f409c1247121fa0"
+    };
+  
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    //const app = initializeApp(firebaseConfig);
+    
+  </script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
